@@ -1308,7 +1308,7 @@ sub OutputFunction {
 	# allow alphanumerics, '_', '[' & ']' in param names
 	# Try to match a standard parameter (keep in sync with gtkdoc-mktmpl)
 	#                                $1                                                                                                                                    $2                             $3                                                           $4       $5
-	} elsif ($declaration =~ s/^\s*((?:G_CONST_RETURN|G_GNUC_UNUSED|unsigned long|unsigned short|signed long|signed short|unsigned|signed|long|short|volatile|const)\s+)*((?:struct\b|enum\b)?\s*\w+)\s*((?:(?:const|restrict)?\s*\*?\s*(?:const\b|restrict\b)?\s*)*)(\w+)?\s*((?:\[\S*\])*)\s*[,\n]//) {
+	} elsif ($declaration =~ s/^\s*((?:G_CONST_RETURN|G_GNUC_UNUSED|unsigned long|unsigned short|signed long|signed short|unsigned|signed|long|short|volatile|const)\s+)*((?:struct\b|enum\b)?\s*\w+)\s*((?:(?:const\b|restrict\b)?\s*\*?\s*(?:const\b|restrict\b)?\s*)*)(\w+)?\s*((?:\[\S*\])*)\s*[,\n]//) {
 	    my $pre	= defined($1) ? $1 : "";
 	    my $type	= $2;
 	    my $ptr	= defined($3) ? $3 : "";
@@ -2828,7 +2828,7 @@ sub ScanSourceFile {
 	return;
     }
 
-#    print "DEBUG: Scanning $file\n";
+    #print "DEBUG: Scanning $file\n";
 
     open (SRCFILE, $file)
 	|| die "Can't open $file: $!";
@@ -3165,7 +3165,7 @@ EOF
 	# Look for a parameter name.
 	if (m%^\s*@(\S+)\s*:%) {
 	    my $param_name = $1;
-#	    print "Found parameter: $param_name\n";
+	    #print "Found parameter: $param_name\n";
 	    # Allow '...' as the Varargs parameter.
 	    if ($param_name eq "...") {
 		$param_name = "Varargs";
@@ -3413,76 +3413,77 @@ EOF
                 $SymbolDocs{$symbol} = "<para>\n$src_doc</para>\n$tmpl_doc";
             }
 
+            # merge parameters
 	    if ($symbol =~ m/.*::.*/) {
 		# For signals we prefer the param names from the source docs,
 	        # since the ones from the templates are likely to contain the
 	        # artificial argn names which are generated by gtkdoc-scangobj.
-		$SymbolParams{$symbol} = $SourceSymbolParams{$symbol}
+		$SymbolParams{$symbol} = $SourceSymbolParams{$symbol};
                 # FIXME: we need to check for empty docs here as well!
 	    } else {
 		# The templates contain the definitive parameter names and order,
 		# so we will not change that. We only override the actual text.
 		my $tmpl_params = $SymbolParams{$symbol};
 		if (!defined ($tmpl_params)) {
-                    #print "No merge for $symbol\n";
-		    next;
-		}
+                    #print "No merge needed for $symbol\n";
+                    $SymbolParams{$symbol} = $SourceSymbolParams{$symbol};
+		} else {
+                    my $params = $SourceSymbolParams{$symbol};
+                    my $j;
+                    for ($j = 0; $j <= $#$tmpl_params; $j += 2) {
+                        my $tmpl_param_name = $$tmpl_params[$j];
 
-		my $params = $SourceSymbolParams{$symbol};
-		my $j;
-		for ($j = 0; $j <= $#$tmpl_params; $j += 2) {
-		    my $tmpl_param_name = $$tmpl_params[$j];
+                        # Allow '...' as the Varargs parameter.
+                        if ($tmpl_param_name eq "...") {
+                          $tmpl_param_name = "Varargs";
+                        }
 
-		    # Allow '...' as the Varargs parameter.
-                    if ($tmpl_param_name eq "...") {
-		      $tmpl_param_name = "Varargs";
-		    }
+                        # Try to find the param in the source comment documentation.
+                        my $found = 0;
+                        my $k;
+                        for ($k = 0; $k <= $#$params; $k += 2) {
+                            my $param_name = $$params[$k];
+                            my $param_desc = $$params[$k + 1];
 
-		    # Try to find the param in the source comment documentation.
-		    my $found = 0;
-		    my $k;
-		    for ($k = 0; $k <= $#$params; $k += 2) {
-			my $param_name = $$params[$k];
-			my $param_desc = $$params[$k + 1];
+                            # We accept changes in case, since the Gnome source docs
+                            # contain a lot of these.
+                            if ("\L$param_name" eq "\L$tmpl_param_name") {
+                                $found = 1;
 
-			# We accept changes in case, since the Gnome source docs
-			# contain a lot of these.
-			if ("\L$param_name" eq "\L$tmpl_param_name") {
-			    $found = 1;
+                                # Override the description.
+                                $$tmpl_params[$j + 1] = $param_desc ;
 
-			    # Override the description.
-			    $$tmpl_params[$j + 1] = $param_desc ;
+                                # Set the name to "" to mark it as used.
+                                $$params[$k] = "";
+                                last;
+                            }
+                        }
 
-			    # Set the name to "" to mark it as used.
-			    $$params[$k] = "";
-			    last;
-			}
-		    }
-
-                    # If it looks like the parameters are there, but not
-                    # in the right place, try to explain a bit better.
-                    if ((!$found) && ($src_doc =~ m/\@$tmpl_param_name:/)) {
-                        print <<EOF;
+                        # If it looks like the parameters are there, but not
+                        # in the right place, try to explain a bit better.
+                        if ((!$found) && ($src_doc =~ m/\@$tmpl_param_name:/)) {
+                            print <<EOF;
          Parameters must start on the line immediately after the function
 	 or macro name.
 EOF
-		    }
-		}
-
-		# Now we output a warning if parameters have been described which
-		# do not exist.
-		for ($j = 0; $j <= $#$params; $j += 2) {
-		    my $param_name = $$params[$j];
-		    if ($param_name) {
-                        # the template builder cannot detect if a macro returns
-                        # a result or not
-                        if(($type eq "MACRO") && ($param_name eq "Returns")) {
-                            next;
                         }
-			print <<EOF;
+                    }
+
+                    # Now we output a warning if parameters have been described which
+                    # do not exist.
+                    for ($j = 0; $j <= $#$params; $j += 2) {
+                        my $param_name = $$params[$j];
+                        if ($param_name) {
+                            # the template builder cannot detect if a macro returns
+                            # a result or not
+                            if(($type eq "MACRO") && ($param_name eq "Returns")) {
+                                next;
+                            }
+                            print <<EOF;
 WARNING: $item described in source code comment block but does not exist -
          $type: $symbol $item: $param_name.
 EOF
+                        }
 		    }
 		}
 	    }
