@@ -8,7 +8,8 @@
 void bug_141869_a (unsigned pid);
 void bug_141869_b (signed pid);
 
-void bug_379466 (int pid);
+void bug_379466 (int
+  pid);
 
 void bug_419997 (int const_values);
 
